[metadata]
name = relativize_imports
version = 0.0.6
description = Automatically convert python absolute imports to relative.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reallyliri/relativize-imports
author = ReallyLiri
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = relativize_imports
python_requires = >=3.7

[options.entry_points]
console_scripts =
    relativize-imports = relativize_imports:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
